--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://accounts.google.com/gsi/client" async></script>
-    <title>Vite App</title>
+    <title>Bookwarden</title>
   </head>
   <body>
     <div id="app"></div>
